fix scrollbar layout in sidebar list

--- a/app/components/resources/map/list/sidebar-list.scss
+++ b/app/components/resources/map/list/sidebar-list.scss
@@ -11,11 +11,11 @@ $font-size-even-smaller: 10px;
 @import 'sidebar-list-button-group';
 
 #sidebar {
-
   height: calc(100vh - 103px);
   overflow-y: auto;
   overflow-x: hidden;
-  padding: 0 !important;
+  padding: 0;
+  margin: 0;
   background-color: #f8f9fa;
 
   .new {
